# dino_mvc

./: .gitignore  README.md  main.py  pyproject.toml
db/: session.py
models/: fileinfo.py  todo.py  user.py
routers/: auth.py  deps.py  file.py  router.py  todos.py  user.py
util/: errors.py  genrateUploadFilename.py
